button dark mode problem fixed

--- a/src/index.css
+++ b/src/index.css
@@ -7,10 +7,5 @@
 }
 
 .button-secondary {
-  @apply bg-[#2895fb34] text-[#115ca1] font-semibold px-4 py-2 rounded-md hover:bg-[#115ca1] hover:text-white hover:border-none transition duration-300 ease-in-out;
-}
-
-/* Dark mode style using Tailwind's dark variant */
-.dark .button-secondary {
-  @apply text-white bg-[#1e3a8a] hover:bg-[#2563eb];
+  @apply bg-[#2895fb34]  font-semibold px-4 py-2 rounded-md hover:bg-[#115ca1] hover:text-white hover:border-none transition duration-300 ease-in-out;
 }
